Apply animations to the gallery

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container__images">
       <div class="container__first">
-        <picture>
+        <picture class="container__pic1">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -36,7 +36,7 @@
         </picture>
       </div>
       <div class="container__second">
-        <picture>
+        <picture class="container__pic2">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -68,7 +68,7 @@
             style="width: auto"
           />
         </picture>
-        <picture>
+        <picture class="container__pic3">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -90,7 +90,7 @@
             media="(min-width:320px)"
             srcset="
               ./images/gallery/gallery-pics03M.png,
-              ./images/gallery/gallery-pics01M@2x.png 2x
+              ./images/gallery/gallery-pics03M@2x.png 2x
             "
           />
           <!-- Default -->
@@ -102,7 +102,7 @@
         </picture>
       </div>
       <div class="container__third">
-        <picture>
+        <picture class="container__pic4">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -134,7 +134,7 @@
             style="width: auto"
           />
         </picture>
-        <picture>
+        <picture class="container__pic5">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -168,7 +168,7 @@
         </picture>
       </div>
       <div class="container__fourth">
-        <picture>
+        <picture class="container__pic6">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -200,7 +200,7 @@
             style="width: auto"
           />
         </picture>
-        <picture>
+        <picture class="container__pic7">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -234,7 +234,7 @@
         </picture>
       </div>
       <div class="container__fifth">
-        <picture>
+        <picture class="container__pic8">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -266,7 +266,7 @@
             style="width: auto"
           />
         </picture>
-        <picture>
+        <picture class="container__pic9">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
@@ -300,7 +300,7 @@
         </picture>
       </div>
       <div class="container__sixth">
-        <picture>
+        <picture class="container__pic10">
           <!-- Desktop -->
           <source
             media="(min-width:768px)"
