--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,14 +1,21 @@
+// GLOBAL
+
+.container {
+  max-width: 480px;
+  margin: auto;
+  padding: 0 15px;
+}
+
 .container__images {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  gap: 2.53px;
 }
 
 .container__first {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-  gap: 20px;
 }
 
 .container__second {
@@ -35,4 +42,42 @@
 .container__sixth {
   display: flex;
   flex-direction: column;
+}
+
+.container__pic1,
+.container__pic2,
+.container__pic3,
+.container__pic4,
+.container__pic5,
+.container__pic6,
+.container__pic7,
+.container__pic8,
+.container__pic9,
+.container__pic10 {
+  transition-duration: 400ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.5);
+  }
+}
+
+// RESPONSIVE
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 100vw; /* Maximul pentru tableta */
+  }
+  .container__images {
+    gap: 6.07px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 100vw; /* Maximul pentru desktop */
+  }
+  .container__images {
+    gap: 8px;
+  }
 }
