--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,3 @@
- --DMSANS: font-family: 'DM Sans', sans-serif;
+$MSANS: 'DM Sans', sans-serif;
 
- --TITANONE: font-family: 'Titan One', cursive;
+$TITANONE: 'Titan One', cursive;
