--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -16,9 +16,8 @@
             </picture>
             <div class="customer-reviews__wrapper">
               <p class="customer-reviews__description">
-                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful serving, cozy atmosphere and polite staff.
-
-
+                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, 
+                you have beautiful serving, cozy atmosphere and polite staff.
               </p>
             </div>
             <p class="customer-reviews__author">Emily, Los Angeles</p>
@@ -36,9 +35,8 @@
             </picture>
             <div class="customer-reviews__wrapper">
               <p class="customer-reviews__description">
-                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful serving, cozy atmosphere and polite staff.
-
-
+                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, 
+                you have beautiful serving, cozy atmosphere and polite staff.
               </p>
             </div>
             <p class="customer-reviews__author">Emily, Los Angeles</p>
@@ -56,9 +54,8 @@
             </picture>
             <div class="customer-reviews__wrapper">
               <p class="customer-reviews__description">
-                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, you have beautiful serving, cozy atmosphere and polite staff.
-
-
+                I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In addition, 
+                you have beautiful serving, cozy atmosphere and polite staff.
               </p>
             </div>
             <p class="customer-reviews__author">Emily, Los Angeles</p>
