--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -42,7 +42,7 @@
           </li>
         </ul>
         <p class="footer__contact-text">
-          Feel free to contact&#160;<a class="footer__phone" href="tel:+61(0)383766284">
+          Feel free to contact<a class="footer__phone" href="tel:610383766284">
             +61 (0) 383 766 284</a
           >
         </p>
