--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,60 +1,68 @@
 <section class="how-its-made">
-  <div class="container">
+  <div class="container container--how-its-made">
     <h3>tradition and love</h3>
     <h2>how it’s made?</h2>
     <div>
-      <img />
+      <img src="/assets/how-its-made_mobile.jpg" alt="Milk image" />
       <div>
-        <p>
-          Ice is a place where you will become not only a little happier, but
-          also healthier. Health is the main value for us, and we follow it when
-          creating our handmade desserts.
-        </p>
-        <p>
-          We use traditional recipes and 100% natural ingredients. Our products
-          are so natural that they can be given to children from the age of
-          three years. Sweets lovers can expect 55 types of ice cream, 15 types
-          of coffee and 23 milkshakes.
-        </p>
+        <ul class="list">
+          <li>
+            <p>
+              Ice is a place where you will become not only a little happier,
+              but also healthier. Health is the main value for us, and we follow
+              it when creating our handmade desserts.
+            </p>
+          </li>
+          <li>
+            <p>
+              We use traditional recipes and 100% natural ingredients. Our
+              products are so natural that they can be given to children from
+              the age of three years. Sweets lovers can expect 55 types of ice
+              cream, 15 types of coffee and 23 milkshakes.
+            </p>
+          </li>
+        </ul>
         <button type="button">
           Read more
           <svg>
-            <use></use>
+            <use href="/assets/icons_how-its-made.svg#icon-arrow"></use>
           </svg>
         </button>
       </div>
     </div>
     <div>
-      <div>
-        <svg>
-          <use></use>
-        </svg>
-        <h2>721</h2>
-        <p>
-          At 721 Cow, we're passionate about producing the highest quality ice
-          cream possible.
-        </p>
-      </div>
-      <div>
-        <svg>
-          <use></use>
-        </svg>
-        <h2>16kg</h2>
-        <p>
-          You can be sure you're getting a scoop of the freshest ice cream
-          around.
-        </p>
-      </div>
-      <div>
-        <svg>
-          <use></use>
-        </svg>
-        <h2>84</h2>
-        <p>
-          We use only the freshest, locally-sourced ingredients to make our 84
-          unique and delicious flavors.
-        </p>
-      </div>
+      <ul class="list">
+        <li>
+          <svg>
+            <use href="/assets/icons_how-its-made.svg#icon-milk"></use>
+          </svg>
+          <h2>721</h2>
+          <p>
+            At 721 Cow, we're passionate about producing the highest quality ice
+            cream possible.
+          </p>
+        </li>
+        <li>
+          <svg>
+            <use href="/assets/icons_how-its-made.svg#icon-fruits"></use>
+          </svg>
+          <h2>16kg</h2>
+          <p>
+            You can be sure you're getting a scoop of the freshest ice cream
+            around.
+          </p>
+        </li>
+        <li>
+          <svg>
+            <use href="/assets/icons_how-its-made.svg#icon-heart"></use>
+          </svg>
+          <h2>84</h2>
+          <p>
+            We use only the freshest, locally-sourced ingredients to make our 84
+            unique and delicious flavors.
+          </p>
+        </li>
+      </ul>
     </div>
   </div>
 </section>
