--- a/src/sass/utils/_base-how-its-made.scss
+++ b/src/sass/utils/_base-how-its-made.scss
@@ -23,3 +23,28 @@ h5 {
   font-weight: bold;
   font-family: 'Titan One', cursive;
 }
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 320px) {
+    width: 320px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+  list-style: none;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+}
