--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
 
-    <include src="./partials/example.html"></include>
-  </head>
-  <body>
     <section class="about" id="about">
       <div class="container">
         <p class="about__lable">Tradition and love</p>
@@ -25,15 +10,14 @@
   
               <img
                 class="about__image"
-                src="../images/mobile/bg-cow-m.png"
+                src="./images/mobile/bg-cow-m.png"
                 alt=""
               />
 
             </picture>
              <picture>
               <source srcset="images/tablet/bg-cow-t.png 1x, images/tablet/bg-cow-t@2x.png 2x" />
-  
-             
+
             </picture>
              <picture>
               <source srcset="images/desktop/bg-cow-d.png 1x, images/desktop/bg-cow-d@2x.png 2x" />
@@ -87,5 +71,4 @@
       </form>
       
     </div>
-  </body>
-</html>
+  
