--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -2,6 +2,7 @@
   <div class="container">
     <h2 class="section__subheading">100% NATURAL</h2>
     <h1 class="section__heading">PRODUCTS</h1>
+
     <ul class="products">
       <li class="products__item products__item--icecream">
         <div>
@@ -30,7 +31,7 @@
           />
         </div>
 
-        <title class="products__title">ICE CREAM</title>
+        <h3 class="products__title products__title--icecream">ICE CREAM</h3>
         <p class="products__text">
           Indulge in our rich and creamy ice cream, handcrafted with all-natural
           ingredients and available in a variety of flavors.
@@ -42,6 +43,12 @@
             class="button-read-more__arrow"
           />
         </button>
+        <div class="products__overlay products__overlay--icecream">
+          <p class="products__text products__text--overlay">
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and publishing industries for previewing layouts and visual mockups.
+          </p>
+        </div>
       </li>
 
       <li class="products__item products__item--icecoffee">
@@ -66,7 +73,7 @@
                 </picture> -->
           <img src="images/product-pic2-d.png" alt="" class="products__image" />
         </div>
-        <title class="products__title">ICE COFFEE</title>
+        <h3 class="products__title products__title--icecoffee">ICE COFFEE</h3>
         <p class="products__text">
           Indulge in our rich and creamy ice cream, handcrafted with all-natural
           ingredients and available in a variety of flavors.
@@ -78,6 +85,12 @@
             class="button-read-more__arrow"
           />
         </button>
+        <div class="products__overlay products__overlay--icecoffee">
+          <p class="products__text products__text--overlay">
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and publishing industries for previewing layouts and visual mockups.
+          </p>
+        </div>
       </li>
 
       <li class="products__item products__item--milkshakes">
@@ -102,7 +115,7 @@
                 </picture> -->
           <img src="images/product-pic3-d.png" alt="" class="products__image" />
         </div>
-        <title class="products__title">MILKSHAKES</title>
+        <h3 class="products__title products__title--milkshakes">MILKSHAKES</h3>
         <p class="products__text">
           Satisfy your sweet tooth with our thick, made with premium ice cream,
           topped with whipped cream and your favorite toppings.
@@ -114,6 +127,12 @@
             class="button-read-more__arrow"
           />
         </button>
+        <div class="products__overlay products__overlay--milkshakes">
+          <p class="products__text products__text--overlay">
+            Lorem ipsum is placeholder text commonly used in the graphic, print,
+            and publishing industries for previewing layouts and visual mockups.
+          </p>
+        </div>
       </li>
     </ul>
   </div>
