--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -14,7 +14,7 @@
   
           <button type="button" class="products-list__btn" data-modal-open data-modal-close>
             <svg class="products-list__btn-icon">
-              <use href="./images/sprite/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite/sprite.svg#icon-arrow"></use>
             </svg>
           </button>
           <div class="products-list__overlay" data-modal>
@@ -33,7 +33,7 @@
   
           <button type="button" class="products-list__btn" data-modal-open data-modal-close>
             <svg class="products-list__btn-icon">
-              <use href="./images/sprite/sprite.svg#icon-facebook"></use>
+              <use href="./images/sprite/sprite.svg#icon-arrow"></use>
             </svg>
           </button>
           <div class="products-list__overlay" data-modal>
@@ -52,7 +52,7 @@
   
           <button type="button" class="products-list__btn" data-modal-open data-modal-close>
             <svg class="products-list__btn-icon">
-              <use href="./images/sprite/sprite.svg#icon-arrow2"></use>
+              <use href="./images/sprite/sprite.svg#icon-arrow"></use>
             </svg>
           </button>
           <div class="products-list__overlay" data-modal>
