--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './common';
 @import './example';
 
-@import './products-section';
 @import './container';
+@import './products-section';
+@import './contacts-section';
