--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -38,7 +38,7 @@
         </p>
         <button class="button-read-more">
           <img
-            src="images/arrow-m.png"
+            src="images/arrow-d.png"
             alt=""
             class="button-read-more__arrow"
           />
