Mobile first rectificari

--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,20 +1,33 @@
 <section class="how-its-made">
   <div class="container container--how-its-made">
-    <h3>tradition and love</h3>
-    <h2>how it’s made?</h2>
-    <div>
-      <img src="/assets/how-its-made_mobile.jpg" alt="Milk image" />
-      <div>
-        <ul class="list">
-          <li>
-            <p>
+    <div class="how-its-made__title">
+      <h3 class="how-its-made__title-first">tradition and love</h3>
+      <h2 class="how-its-made__title-second">how it’s made?</h2>
+    </div>
+    <div class="how-its-made__content">
+      <picture class="how-its-made__content-image">
+        <source srcset="/assets/how-its-made_mobile.png" />
+        <source
+          media="(min-width:768px)"
+          srcset="/assets/how-its-made_tablet.png"
+        />
+        <source
+          media="(min-width:1200px)"
+          srcset="/assets/how-its-made_desktop.png"
+        />
+        <img src="/assets/how-its-made_mobile.png" alt="Cow with milk" />
+      </picture>
+      <div class="how-its-made__content-description">
+        <ul class="list how-its-made__content-description-list">
+          <li class="how-its-made__content-description-list-item">
+            <p class="how-its-made__content-description-list-item--black">
               Ice is a place where you will become not only a little happier,
               but also healthier. Health is the main value for us, and we follow
               it when creating our handmade desserts.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="how-its-made__content-description-list-item">
+            <p class="how-its-made__content-description-list-item--gray">
               We use traditional recipes and 100% natural ingredients. Our
               products are so natural that they can be given to children from
               the age of three years. Sweets lovers can expect 55 types of ice
@@ -22,42 +35,48 @@
             </p>
           </li>
         </ul>
-        <button type="button">
+        <button type="button" class="how-its-made__button">
           Read more
-          <svg>
+          <svg class="how-its-made__button-icon">
             <use href="/assets/icons_how-its-made.svg#icon-arrow"></use>
           </svg>
         </button>
       </div>
     </div>
-    <div>
-      <ul class="list">
-        <li>
-          <svg>
+    <div class="how-its-made__brief-description">
+      <ul class="list how-its-made__brief-description-list">
+        <li class="how-its-made__brief-description-list-item">
+          <svg
+            class="how-its-made__brief-description-icon how-its-made__brief-description-icon--milk"
+          >
             <use href="/assets/icons_how-its-made.svg#icon-milk"></use>
           </svg>
-          <h2>721</h2>
-          <p>
+          <h2 class="how-its-made__brief-description-title">721</h2>
+          <p class="how-its-made__brief-description-text">
             At 721 Cow, we're passionate about producing the highest quality ice
             cream possible.
           </p>
         </li>
-        <li>
-          <svg>
+        <li class="how-its-made__brief-description-list-item">
+          <svg
+            class="how-its-made__brief-description-icon how-its-made__brief-description-icon--fruits"
+          >
             <use href="/assets/icons_how-its-made.svg#icon-fruits"></use>
           </svg>
-          <h2>16kg</h2>
-          <p>
+          <h2 class="how-its-made__brief-description-title">16kg</h2>
+          <p class="how-its-made__brief-description-text">
             You can be sure you're getting a scoop of the freshest ice cream
             around.
           </p>
         </li>
-        <li>
-          <svg>
+        <li class="how-its-made__brief-description-list-item">
+          <svg
+            class="how-its-made__brief-description-icon how-its-made__brief-description-icon--heart"
+          >
             <use href="/assets/icons_how-its-made.svg#icon-heart"></use>
           </svg>
-          <h2>84</h2>
-          <p>
+          <h2 class="how-its-made__brief-description-title">84</h2>
+          <p class="how-its-made__brief-description-text">
             We use only the freshest, locally-sourced ingredients to make our 84
             unique and delicious flavors.
           </p>
