--- a/src/sass/utils/_base-how-its-made.scss
+++ b/src/sass/utils/_base-how-its-made.scss
@@ -22,13 +22,20 @@ h4,
 h5 {
   font-weight: bold;
   font-family: 'Titan One', cursive;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+image {
+  display: block;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  @media screen and (min-width: 320px) {
+  @media screen and (max-width: 768px) {
     width: 320px;
+    padding: 60px 20px 66px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
