--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,26 @@
 <div class="hero-header-section">
   <header class="global-header">
     <div class="container">
-      <svg><use href="./images/icons.svg.svg#icon-logo-icecream "></use></svg>
+      <svg class="global-header__logo"><use href="./images/icons.svg.svg#icon-logo-icecream "></use></svg>
       <nav>
         <ul class="global-header__menu">
           <li><a href="-">Home</a></li>
           <li><a href="#about">About us</a></li>
-          <li><a href="#how-it's-made">How it’s made?</a></li>
-          <li><a href="#our-product">Our products</a></li>
+          <li><a href="#about">How it’s made?</a></li>
+          <li><a href="#our-products">Our products</a></li>
           <li><a href="#contanct">Contact</a></li>
         </ul>
       </nav>
-      <button type="button" class="global-header__button">Buy now <svg ><use href="./images/icons.svg.svg#icon-button-vector"></use></svg></button>
+      <button type="button" class="global-header__button " data-modal-open>Buy now <svg ><use href="./images/icons.svg.svg#icon-button-vector"></use></svg></button>
     </div>
+    <button
+          class="button button--toggle-menu js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg><use href="./images/icons.svg.svg#icon-burger-menu" ></use>
+    </svg>
+        </button>
   </header>
   <section class="section--hero-section hero-section">
     <div class="container">
@@ -22,7 +30,7 @@
       
         <a href="#products" class="hero-section__products-anchor">Products</a>
       
-        <a href="#how-it's-made" class="hero-section__howitsmade-anchor">How it’s made?</a>
+        <a href="#about" class="hero-section__howitsmade-anchor">How it’s made?</a>
     
       </div>
 
@@ -33,22 +41,16 @@
           Indulge in a scoop of ice cream made with passion and treat your taste
           buds to an unforgettable experience!
       </p>
-      <a href="#how-it's-made"><img src="./images/hero-arrow.jpg" alt="arrow"/></a>
+      <a href="#about"><img src="./images/hero-arrow.jpg" alt="arrow"/></a>
       </div>
     </div>
     <ul class="hero-section__centres">
-      <li></svg>
-    <svg class="first-centre-svg" height="30" width="30">
-      <ellipse cx="15" cy="15" rx="15" ry="15" style="fill: #ffffff" />
-    </svg></li>
-      <li><p class="first-centre-svg__nr">16</p></li>
-      <li><p class="first-centre-svg__item">cafes</p></li>
-      <li></svg>
-    <svg class="second-centre-svg" height="30" width="30">
-      <ellipse cx="15" cy="15" rx="15" ry="15" style="fill: #ffffff" />
-    </svg></li>
-      <li><p class="second-centre-svg__nr">23</p></li>
-      <li><p class="second-centre-svg__item">food trucks</p></li>
+      <li><img class="first-centre-img" src="./images/white-circle.png" alt="white circle"></li>
+      <li><p class="first-centre-img__nr">16</p></li>
+      <li><p class="first-centre-img__item">cafes</p></li>
+      <li><img class="second-centre-img" src="./images/white-circle.png" alt="white circle"></li>
+      <li><p class="second-centre-img__nr">23</p></li>
+      <li><p class="second-centre-img__item">food trucks</p></li>
     </ul>
     <div class="hero-section__big-icecream">
     
