--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,9 +1,10 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
 ul {
   list-style-type: none;
 }
 .container {
-  max-width: 1280;
+  max-width: 320px;
   margin: 0 auto;
 }
 
@@ -16,4 +17,44 @@ a:link {
 
 a:visited {
   text-decoration: none;
+}
+@media screen and (min-width: $tabletBreackpoint) {
+  ul {
+    list-style-type: none;
+  }
+  .container {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+
+  a {
+    text-decoration: none;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
+}
+@media screen and (min-width: $descktopBreackpoint) {
+  ul {
+    list-style-type: none;
+  }
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  a {
+    text-decoration: none;
+  }
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    text-decoration: none;
+  }
 }
