--- a/src/sass/_header+hero.scss
+++ b/src/sass/_header+hero.scss
@@ -1,10 +1,14 @@
+/*Mobile Breackpoint*/
 .hero-header-section {
   background-color: $colorPink;
   background-image: url(../images/pink-circle.png);
   background-repeat: no-repeat;
   background-position: 945px 68px;
   position: relative;
-  padding-bottom: 70px;
+  padding-bottom: 16px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 32px;
 }
 .global-header {
   .container {
@@ -12,8 +16,12 @@
     justify-content: space-between;
     align-items: center;
   }
+  &__logo {
+    width: 199;
+    height: 50px;
+  }
   &__menu {
-    display: flex;
+    display: none;
     gap: 35px;
     a {
       font-family: 'DM Sans';
@@ -31,7 +39,7 @@
     }
   }
   &__button {
-    display: flex;
+    display: none;
     align-items: center;
     width: 159px;
     height: 44px;
@@ -66,9 +74,23 @@
     left: 927px;
     top: 54px;
   }
+  .button--toggle-menu {
+    position: absolute;
+    top: 50px;
+    left: 420px;
+    padding: 0;
+    border: none;
+    color: $colorRed;
+    background-color: transparent;
+    svg {
+      width: 20px;
+      height: 12px;
+    }
+  }
 }
 .hero-section {
   &__title {
+    padding-top: 20px;
     h1 {
       margin-block-start: 6px;
       padding-left: 0;
@@ -132,10 +154,10 @@
       font-family: 'DM Sans';
       font-style: normal;
       font-weight: 400;
-      font-size: 14px;
-      line-height: 20px;
-      width: 200px;
-      height: 78px;
+      font-size: 8px;
+      line-height: 12px;
+      width: 114px;
+      height: 48px;
       color: $colorWhite;
     }
     div {
@@ -158,65 +180,556 @@
     }
   }
   &__centres {
-    .first-centre-svg {
+    .first-centre-img {
       position: absolute;
-      right: 315px;
+      left: 1556px;
       top: 170px;
       &__nr {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 46px;
-        line-height: 53px;
+        font-size: 28px;
+        line-height: 32px;
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $colorRed;
         position: absolute;
-        right: 333px;
+        left: 1516px;
         top: 129px;
       }
       &__item {
         position: absolute;
-        right: 335px;
+        left: 1529px;
         top: 215px;
 
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 18px;
+        font-size: 8px;
+        line-height: 10px;
         color: $colorWhite;
       }
     }
-    .second-centre-svg {
+    .second-centre-img {
       position: absolute;
-      right: 315px;
+      left: 1556px;
       top: 264px;
       &__nr {
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 46px;
-        line-height: 53px;
+        font-size: 28px;
+        line-height: 32px;
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: $colorRed;
         position: absolute;
-        right: 333px;
+        left: 1516px;
         top: 220px;
       }
       &__item {
         position: absolute;
-        right: 335px;
+        left: 1495px;
         top: 310px;
 
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 18px;
+        font-size: 8px;
+        line-height: 10px;
         color: $colorWhite;
       }
     }
+  }
+}
+
+/*Tablet Breackpoint*/
+
+@media screen and (min-width: $tabletBreackpoint) {
+  .hero-header-section {
+    background-color: $colorPink;
+    background-image: url(../images/pink-circle.png);
+    background-repeat: no-repeat;
+    background-position: 945px 68px;
+    position: relative;
+    padding-bottom: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 32px;
+  }
+  .global-header {
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &__logo {
+      width: 199;
+      height: 50px;
+    }
+    &__menu {
+      display: none;
+      gap: 35px;
+      a {
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+        color: $colorWhite;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+          color: $colorRed;
+          cursor: pointer;
+        }
+      }
+    }
+    &__button {
+      display: flex;
+      align-items: center;
+      width: 159px;
+      height: 44px;
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 21px;
+      border: none;
+      color: $colorRed;
+      border-radius: 22px;
+      background-color: $colorWhite;
+      padding-left: 37px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:focus,
+      &:hover {
+        background-color: $colorGrey;
+        cursor: pointer;
+      }
+
+      svg {
+        margin-left: 12px;
+        color: $colorRed;
+        height: 8px;
+        width: 4px;
+      }
+    }
+    .pink-circle {
+      position: absolute;
+      width: 534px;
+      height: 534px;
+      left: 927px;
+      top: 54px;
+    }
+  }
+  .button--toggle-menu {
+    position: absolute;
+    top: 50px;
+    left: 520px;
+    padding: 0;
+    border: none;
+    color: $colorRed;
+    background-color: transparent;
+    svg {
+      width: 20px;
+      height: 12px;
+    }
+  }
+
+  .hero-section {
+    &__title {
+      padding-top: 20px;
+      h1 {
+        margin-block-start: 6px;
+        padding-left: 0;
+
+        width: 277px;
+        height: 137px;
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 38px;
+        line-height: 44px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: $colorWhite;
+      }
+      span {
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 58px;
+        line-height: 53px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+
+        color: $colorRed;
+      }
+    }
+    &__products-anchor {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 11px 23px;
+      background: $colorRed;
+      border-radius: 30px;
+      color: $colorWhite;
+    }
+    &__howitsmade-anchor {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 10px 23px;
+      background: $colorWhite;
+      border-radius: 30px;
+      color: $colorRed;
+      margin-left: 12px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        cursor: pointer;
+        background-color: $colorGrey;
+      }
+    }
+    &__description {
+      display: flex;
+      margin-top: 40px;
+      p {
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 8px;
+        line-height: 12px;
+        width: 114px;
+        height: 48px;
+        color: $colorWhite;
+      }
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 55px;
+      }
+    }
+    &__big-icecream {
+      .icecream-photo {
+        position: absolute;
+        left: 1066px;
+        top: 128px;
+      }
+      .so-tasty-photo {
+        position: absolute;
+        left: 1310px;
+        top: 445px;
+      }
+    }
+    &__centres {
+      .first-centre-img {
+        position: absolute;
+        left: 1556px;
+        top: 170px;
+        &__nr {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 28px;
+          line-height: 32px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          color: $colorRed;
+          position: absolute;
+          left: 1516px;
+          top: 129px;
+        }
+        &__item {
+          position: absolute;
+          left: 1529px;
+          top: 215px;
+
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 8px;
+          line-height: 10px;
+          color: $colorWhite;
+        }
+      }
+      .second-centre-img {
+        position: absolute;
+        left: 1556px;
+        top: 264px;
+        &__nr {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 28px;
+          line-height: 32px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          color: $colorRed;
+          position: absolute;
+          left: 1516px;
+          top: 220px;
+        }
+        &__item {
+          position: absolute;
+          left: 1495px;
+          top: 310px;
+
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 8px;
+          line-height: 10px;
+          color: $colorWhite;
+        }
+      }
+    }
+  }
+}
+
+/* Descktop Breackpoint*/
+@media screen and (min-width: $descktopBreackpoint) {
+  .hero-header-section {
+    background-color: $colorPink;
+    background-image: url(../images/pink-circle.png);
+    background-repeat: no-repeat;
+    background-position: 915px 55px;
+    position: relative;
+    padding-bottom: 31px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 37px;
+  }
+  .global-header {
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &__logo {
+      width: 199;
+      height: 50px;
+    }
+    &__menu {
+      display: flex;
+      gap: 35px;
+      a {
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+        color: $colorWhite;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+          color: $colorRed;
+          cursor: pointer;
+        }
+      }
+    }
+    &__button {
+      display: flex;
+      align-items: center;
+      width: 159px;
+      height: 44px;
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 21px;
+      border: none;
+      color: $colorRed;
+      border-radius: 22px;
+      background-color: $colorWhite;
+      padding-left: 37px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:focus,
+      &:hover {
+        background-color: $colorGrey;
+        cursor: pointer;
+      }
+
+      svg {
+        margin-left: 12px;
+        color: $colorRed;
+        height: 8px;
+        width: 4px;
+      }
+    }
+    .pink-circle {
+      position: absolute;
+      width: 534px;
+      height: 534px;
+      left: 927px;
+      top: 54px;
+    }
+  }
+  .hero-section {
+    padding-top: 60px;
+    &__title {
+      h1 {
+        margin-block-start: 6px;
+        padding-left: 0;
+
+        width: 277px;
+        height: 137px;
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 38px;
+        line-height: 44px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: $colorWhite;
+      }
+      span {
+        font-family: 'Titan One';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 58px;
+        line-height: 53px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+
+        color: $colorRed;
+      }
+    }
+    &__products-anchor {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 11px 23px;
+      background: $colorRed;
+      border-radius: 30px;
+      color: $colorWhite;
+    }
+    &__howitsmade-anchor {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      padding: 10px 23px;
+      background: $colorWhite;
+      border-radius: 30px;
+      color: $colorRed;
+      margin-left: 12px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        cursor: pointer;
+        background-color: $colorGrey;
+      }
+    }
+    &__description {
+      display: flex;
+      margin-top: 40px;
+      p {
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        width: 200px;
+        height: 78px;
+        color: $colorWhite;
+      }
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 55px;
+      }
+    }
+    &__big-icecream {
+      .icecream-photo {
+        position: absolute;
+        left: 1020px;
+        top: 110px;
+      }
+      .so-tasty-photo {
+        position: absolute;
+        top: 426px;
+        left: 1265px;
+      }
+    }
+    &__centres {
+      .first-centre-img {
+        position: absolute;
+        width: 32px;
+        height: 32px;
+        left: 1530px;
+        top: 170px;
+        &__nr {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 46px;
+          line-height: 53px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          color: $colorRed;
+          position: absolute;
+          left: 1490px;
+          top: 129px;
+        }
+        &__item {
+          position: absolute;
+          left: 1510px;
+          top: 215px;
+
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 18px;
+          color: $colorWhite;
+        }
+      }
+      .second-centre-img {
+        position: absolute;
+        left: 1530px;
+        top: 264px;
+        &__nr {
+          font-family: 'Titan One';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 46px;
+          line-height: 53px;
+          letter-spacing: 0.04em;
+          text-transform: uppercase;
+          color: $colorRed;
+          position: absolute;
+          left: 1490px;
+          top: 220px;
+        }
+        &__item {
+          position: absolute;
+          left: 1475px;
+          top: 310px;
+
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 18px;
+          color: $colorWhite;
+        }
+      }
+    }
+  }
+  .button--toggle-menu {
+    visibility: hidden;
+  }
+  .menu-container {
+    visibility: hidden;
   }
 }
