--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,3 +4,5 @@ $colorPinklighter: rgba(255, 245, 246, 1);
 $colorPinkdarker: rgba(255, 165, 186, 1);
 $colorWhite: rgba(255, 255, 255, 1);
 $colorGrey: rgba(236, 235, 235, 1);
+$tabletBreackpoint: 481px;
+$descktopBreackpoint: 769px;
