--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,65 +1,118 @@
-<header class="header">
-    <div class="container header__container">
-      <nav class="nav">
-        <svg class="burger-btn__logo">
-          <use href="../images/sprite/logo/symbol-defs.svg#icon-logo"></use>
-        </svg>
-            
-       
-        <ul class="nav-list list">
-          <li class="nav-list__item">
-            <a class="nav-list_link nav-list_link_current link" href="./index.html">HOME</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link link" href="./index.html">About us</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link link" href="./customer-reviews.html">How it's made? </a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link link" href="./products.html">Our products</a>
-          </li>
-          <li class="nav-list__item">
-            <a class="nav-list__link link" href="contacts.html">Contact</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="burger-btn">
-        <svg class="burger-btn__icon">
-          <use href="../images/sprite/icon/symbol-defs.svg#icon-burger"></use>
-        </svg>
-      </button>
-      <button class="modal-btn">
-    Products    
+<div class="container">
+<header class="global_header">
+  <nav class="global-header__nav">
+    <div class="global-header__nav__logo">
+      <img src="images/logo.png" alt="logo">
+    </div>
+    <ul id="navlinks" class="nav__link active">
+      <li class="nav__li">
+        <a href="index.html" class="nav__li link">Home</a>
+      </li>
+      <li class="nav__li">
+        <a href="#" class="nav__li link">About us</a>
+      </li>
+      <li class="nav__li">
+        <a href="#" class="nav__li link">Hot it's made?</a>
+      </li>
+      <li class="nav__li">
+        <a href="#" class="nav__li link">Our products</a>
+      </li> 
+      <li class="nav__li">
+        <a href="#" class="nav__li link">Contact</a>
+      </li>
+      <li class="nav__li">
+        <button class="nav_btn">Buy Now</button>
+      </li>
+    </ul>
+    
+    <button id="navtogglebtn" class="nav_toggle">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    
     </button>
-
-      
-    </div>
-    <div class="mobile-menu" data-menu>
-      <button class="mobile-menu__close-btn">
-      How it’s made?
-      </button>
-      <button class="mobile-menu__modal-btn">
-        Buy now
-     
-      </button>
-      <ul class="mobile-nav list">
-        <li class="mobile-nav__item">
-          <a class="mobile-nav_link mobile-nav_link_current link" href="./index.html">Home</a>
-        </li>
-        <li class="mobile-nav__item">
-          <a class="mobile-nav__link link" href="./index.html">About us</a>
-        </li>
-        <li class="mobile-nav__item">
-          <a class="mobile-nav__link link" href=./customer-reviews.html">How it's made?</a>
-        </li>
-        <li class="mobile-nav__item">
-          <a class="mobile-nav__link link" href="products.html">Our products</a>
-        </li>
-        <li class="mobile-nav__item">
-          <a class="mobile-nav__link link" href="./contacts.html">Contact</a>
-        </li>
-      </ul>
-    </div>
+  </nav>
+  <div class="header_tittle">
+    <h1>ICE CREAM <BR>MADE WIT <BR> <span>PASSION</span></h1>
+    <button class="header_tittle__btn">Products</button>
+    <button class="header_tittle__btn">How it's made?</button>
+  </div>
+  <script src="js/modal.js"></script>
   </header>
+</div>
 
+<style>
+  .global-header{
+    color: white;
+    background: red;
+  }
+  
+  .global-header__nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+   .nav__link {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    list-style: none;
+
+    
+  }
+.nav__link li a{
+  text-decoration: none;
+  display: inline-block;
+  padding: 16px;
+}
+.nav__link li a:hover {
+  color: #D41443;
+  background-color: white;
+  transition: color 0,5s ease;
+
+}
+.nav-toggle {
+  display: none;
+}
+.nav_btn {
+  position: absolute;
+width: 209px;
+height: 44px;
+left: 20px;
+top: 60px;
+}
+  @media screen and (min-width: 320px) {
+  
+  
+  .nav-toggle {
+    display: block;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .bar {
+    width: 30px;
+    height: 3px;
+    margin:5px;
+    background-color: black;
+  }
+  .nav__link  {
+    flex-direction: column;
+    position: absolute;
+    background-color: #E17992;
+    left:0;
+    width: 100%;
+    display: none;
+ 
+  }
+
+  .nav__link li a {
+      width: 100%;
+  }
+  .active {
+    display: flex;
+  }
+  }
+</style>
