--- a/src/partials/_hero-header.scss
+++ b/src/partials/_hero-header.scss
@@ -1,8 +1,201 @@
-.hero-header {
+.hero-header-container {
+  display: flex;
+  width: 1200px;
+}
+
+.hero-header,
+body {
   top: 0px;
   background: #ffb8ca;
 }
+
 .hero-header-logo {
-  padding-left: 57px;
+  padding-left: 16px;
   padding-top: 37px;
+}
+
+.hero-header-up-space-home {
+  width: 46px;
+  height: 21px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #d41443;
+  padding-left: 128px;
+  padding-top: 52px;
+}
+
+.hero-header-up-space-aboutus {
+  width: 70px;
+  height: 21px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-top: 52px;
+  padding-left: 35px;
+}
+
+.hero-header-up-space-howitsmade {
+  width: 117px;
+  height: 21px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-top: 52px;
+  padding-left: 35px;
+}
+
+.hero-header-up-space-ourproducts {
+  width: 104px;
+  height: 21px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-top: 52px;
+  padding-left: 35px;
+}
+
+.hero-header-up-space-contacts {
+  width: 64px;
+  height: 21px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-top: 52px;
+  padding-left: 35px;
+}
+
+.hero-header-button-buynow {
+  width: 159px;
+  height: 44px;
+  left: 1025px;
+  top: 40px;
+  background: #ffffff;
+  border-radius: 22px;
+  position: absolute;
+  border: none;
+}
+
+.hero-header-title-1 {
+  width: 277px;
+  height: 137px;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 38px;
+  line-height: 44px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-left: 16px;
+  padding-top: 60px;
+}
+
+.hero-header-title-2 {
+  width: 277px;
+  height: 137px;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 62px;
+  line-height: 44px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  padding-left: 16px;
+  margin-top: -80;
+}
+
+.hero-header-nav-button-products {
+  position: absolute;
+  width: 107px;
+  height: 40px;
+  left: 16px;
+  top: 368px;
+  background: #d41443;
+  border-radius: 20px;
+  border: none;
+  color: #ffffff;
+}
+
+.hero-header-nav-button-howitsmade {
+  width: 138px;
+  height: 40px;
+  margin-left: 135px;
+  margin-top: -108px;
+  background: #ffffff;
+  border-radius: 20px;
+  border: none;
+  color: #d41443;
+}
+
+.hero-header-nav-buttons {
+  display: flex;
+}
+
+.hero-header-nav-iamges-milk {
+  display: flex;
+}
+
+.hero-header-nav-milk-img {
+  position: absolute;
+  padding-left: 16px;
+  padding-top: 40px;
+  color: #ffb8ca;
+}
+
+.hero-header-nav-iamges-milk-images-row {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  position: absolute;
+  margin-left: 249px;
+}
+
+.hero-header-nav-iamges-milk-images-row-h4 {
+  width: 200px;
+  height: 78px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 140%;
+  color: #ffffff;
+}
+
+.hero-header-nav-iamges-milk-arrow {
+  width: 36px;
+  height: 36px;
+}
+
+.hero-header-nav-circle {
+  position: absolute;
+  width: 534px;
+  height: 534px;
+  left: 517px;
+  top: 54px;
 }
