--- a/src/partials/Hero-header.html
+++ b/src/partials/Hero-header.html
@@ -1,30 +1,70 @@
 <!-- Hero header -->
 <link rel="stylesheet" href="./_hero-header.scss" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Titan+One&display=swap"
+  rel="stylesheet"
+/>
 <section class="hero-header">
-  <div class="hero-header-logo">
-    <div class="hero-header-container"></div>
-    <img src="./images/Group.svg" alt="Logo" />
-    <div><a>Home</a></div>
-    <div><a>About us</a></div>
-    <div><a>How it’s made?</a></div>
-    <div><a>Our products</a></div>
-    <div><a>Contact</a></div>
-    <button>
+  <div class="hero-header-container">
+    <div class="hero-header-logo">
+      <img src="./images/Group.svg" alt="Logo" />
+    </div>
+    <div class="hero-header-up-space hero-header-up-space-home">
+      <a>Home</a>
+    </div>
+    <div class="hero-header-up-space hero-header-up-space-aboutus">
+      <a>About us</a>
+    </div>
+    <div class="hero-header-up-space hero-header-up-space-howitsmade">
+      <a>How it’s made?</a>
+    </div>
+    <div class="hero-header-up-space hero-header-up-space-ourproducts">
+      <a>Our products</a>
+    </div>
+    <div class="hero-header-up-space hero-header-up-space-contacts">
+      <a>Contact</a>
+    </div>
+    <button class="hero-header-button-buynow">
       Buy now <img src="./images/Vector-1.png" alt="button arrow ->" />
     </button>
   </div>
   <div class="hero-header-nav">
-    <h3 style="text-transform: uppercase">ice cream made with</h3>
-    <h2 style="text-transform: uppercase">passion</h2>
-    <button>Products</button>
-    <button>How it’s made?</button> <br />
-    <img src="./images/slider-pic5-1.jpg" alt="a can of milk" />
-    <img src="./images/arrow-right-3.png" alt="arrow right ->" />
-    <h4>
-      Indulge in a scoop of ice cream made with passion and treat your taste
-      buds to an unforgettable experience!
-    </h4>
-    <img src="./images/Ellipse-3.png" alt="circle" />
+    <div class="hero-header-nav-title">
+      <h3 class="hero-header-title-1">ice cream made with</h3>
+      <h2 class="hero-header-title-2">passion</h2>
+    </div>
+    <div class="hero-header-nav-buttons">
+      <button class="hero-header-nav-button-products">Products</button>
+      <button class="hero-header-nav-button-howitsmade">How it’s made?</button>
+    </div>
+    <div class="hero-header-nav-iamges-milk">
+      <img
+        src="./images/slider-pic5 1.png"
+        alt="a can of milk"
+        class="hero-header-nav-milk-img"
+      />
+      <div class="hero-header-nav-iamges-milk-images-row">
+        <h4 class="hero-header-nav-iamges-milk-images-row-h4">
+          Indulge in a scoop of ice <br />
+          cream made with passion and <br />
+          treat your taste buds to an <br />
+          unforgettable experience!
+        </h4>
+        <img
+          src="./images/arrow-right-3.png"
+          alt="arrow right ->"
+          class="hero-header-nav-iamges-milk-arrow"
+        />
+      </div>
+      <br />
+    </div>
+    <img
+      src="./images/Ellipse-3.png"
+      alt="circle"
+      class="hero-header-nav-circle"
+    />
     <img src="./images/slider-pic7-1.png" alt="IceCream" /> <br />
     <img src="./images/Ellipse-1.png" alt="circle" />
     <h2>16</h2>
