update header section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,10 +30,82 @@
           >
         </li>
       </ul>
-      <i class="fa-solid fa-bars hamburger"></i>
-      <button class="header__button" type="button">Buy now</button>
+      <div class="header__btn">
+        <button
+          class="button button--toggle-menu js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <i class="fa-solid fa-bars hamburger"></i>
+        </button>
+        <button class="header__button" type="button">Buy now</button>
+      </div>
+      <section class="mobile-menu js-menu-container">
+        <nav>
+          <button class="js-close-menu button--close-mobile-menu">
+            &times;
+          </button>
+          <div class="mobile-menu_container">
+            <button
+              class="mobile-menu__button mobile-menu--hoverme"
+              type="button"
+            >
+              <span class="mobile-menu__buyme">Buy now</span>
+              <span class="mobile-menu__arrow-icon">
+                <i class="fa-solid fa-chevron-right"></i
+              ></span>
+            </button>
+            <ul class="mobile-menu__pages">
+              <li>
+                <a
+                  href="#home"
+                  class="mobile-menu__link"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#aboutus"
+                  class="mobile-menu__link"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  >About us</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#howitsmade"
+                  class="mobile-menu__link"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  >How it's made</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#ourproduction"
+                  class="mobile-menu__link"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  >Our production</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#contact"
+                  class="mobile-menu__link"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </section>
     </nav>
-    <section></section>
     <div class="hero">
       <div class="hero__title">
         <h2>ICE CREAM</h2>
@@ -100,43 +172,9 @@
         <img
           src="./images/icecream1.webp"
           alt="ice cream"
-          width="236px"
-          height="557px"
+          class="hero__origin-pic"
         />
       </picture>
     </section>
-    <aside class="facts container">
-      <div>
-        <span class="facts__number-first facts--style">16</span>
-        <svg class="facts__ellipse-first">
-          <use href="./images/symbol-defs.svg#ellipse"></use>
-        </svg>
-        <span class="facts__spots-first facts--spots-style">cafes</span>
-      </div>
-      <div>
-        <span class="facts__number-second facts--style">23</span>
-        <svg class="facts__ellipse-second">
-          <use href="./images/symbol-defs.svg#ellipse"></use>
-        </svg>
-        <span class="facts__spots-second facts--spots-style">food trucks</span>
-      </div>
-      <picture class="hero__tasty">
-        <!--Desktop-->
-        <source
-          media="min-width:1200px"
-          srcset="images/icecream3.webp 1x, images/icecream3@2x.webp 2x"
-        />
-        <!--Tablet-->
-        <source
-          media="min-width:768px"
-          srcset="images/icecream3.webp 1x, images/icecream3@2x.webp 2x"
-        />
-        <!--Mobile-->
-        <source
-          srcset="images/icecream3.webp 1x, images/icecream3@2x.webp 2x"
-        />
-        <img src="./images/icecream3.webp" alt="ice cream" />
-      </picture>
-    </aside>
   </section>
 </header>
