--- a/src/partials/_hero-header.scss
+++ b/src/partials/_hero-header.scss
@@ -72,6 +72,7 @@ body {
   color: #ffffff;
   padding-top: 52px;
   padding-left: 35px;
+  z-index: 1;
 }
 
 .hero-header-up-space-contacts {
@@ -87,6 +88,7 @@ body {
   color: #ffffff;
   padding-top: 52px;
   padding-left: 35px;
+  z-index: 1;
 }
 
 .hero-header-button-buynow {
@@ -112,7 +114,7 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   padding-left: 16px;
-  padding-top: 60px;
+  padding-top: 40px;
 }
 
 .hero-header-title-2 {
@@ -135,7 +137,7 @@ body {
   width: 107px;
   height: 40px;
   left: 16px;
-  top: 368px;
+  top: 348px;
   background: #d41443;
   border-radius: 20px;
   border: none;
@@ -159,10 +161,13 @@ body {
 
 .hero-header-nav-iamges-milk {
   display: flex;
+  margin-top: -42px;
 }
 
 .hero-header-nav-milk-img {
   position: absolute;
+  width: 213px;
+  height: 216px;
   padding-left: 16px;
   padding-top: 40px;
   color: #ffb8ca;
@@ -198,4 +203,101 @@ body {
   height: 534px;
   left: 517px;
   top: 54px;
+}
+
+.hero-header-nav-icecream {
+  position: absolute;
+  top: 110px;
+  padding-left: 636px;
+  background: url(slider-pic7.png);
+}
+
+.hero-header-nav-circle1 {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 1154px;
+  top: 152px;
+}
+
+.hero-header-nav-16 {
+  position: absolute;
+  width: 54px;
+  height: 53px;
+  left: 1122px;
+  top: 126px;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 46px;
+  line-height: 53px;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+
+.hero-header-nav-cafes {
+  position: absolute;
+  width: 20px;
+  height: 10px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: right;
+  text-align: right;
+  color: #ffffff;
+  margin-left: 1130px;
+  margin-top: -235px;
+}
+
+.hero-header-nav-circle2 {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 1154px;
+  top: 244px;
+}
+
+.hero-header-nav-23 {
+  position: absolute;
+  width: 59px;
+  height: 53px;
+  left: 1107px;
+  top: 210px;
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 46px;
+  line-height: 53px;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+
+.hero-header-nav-foodtrucks {
+  position: absolute;
+  width: 74px;
+  height: 18px;
+  left: 1092px;
+  top: 283px;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: right;
+  color: #ffffff;
+}
+
+.hero-header-nav-girllickicecream {
+  position: absolute;
+  width: 304px;
+  height: 241px;
+  left: 880px;
+  top: 423px;
+  background: url(slider-pic4.png);
 }
