--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -142,6 +142,7 @@
   .about__image {
     height: 516px;
     width: 516px;
+    margin-left: 100px;
     transform: scale(1);
     &:hover {
       transform: scale(1.2);
@@ -151,11 +152,10 @@
   .about__pharagraph {
     display: block;
     padding-top: 80px;
-    margin-left: 100px;
+    margin-left: 200px;
     padding-left: 200px;
-
-    width: 600px;
     z-index: 1;
+    width: 600px;
   }
 
   .about__pharagraph-one {
@@ -179,9 +179,10 @@
   width: 176px;
   height: 44px;
   background-color: #fff;
-  border-radius: 22px;
+  border-radius: 30px;
+  border: 0px;
   font-family: 16px;
-  color: #000000;
+  color: #d41443;
   font-size: 14px;
   font-weight: 700;
   font-style: normal;
@@ -191,7 +192,7 @@
 
   &:hover,
   &:focus {
-    background-color: #ecebeb;
-    transform: scale(1.2);
+    background-color: #fff;
+    transform: scale(1.4);
   }
 }
