--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -20,27 +20,36 @@
         <h2 class="about__title">how it’s made?</h2>
         <div class="about__main">
           <div class="about__main-image">
-             <picture>
-              <source srcset="images/mobile/bg-cow-m.png 1x, images/mobile/bg-cow-m@2x.png 2x" />
-  
-              <img
-                class="about__image"
-                src="../images/mobile/bg-cow-m.png"
-                alt=""
+            <picture>
+              <source
+                srcset="
+                  images/mobile/bg-cow-m.png    1x,
+                  images/mobile/bg-cow-m@2x.png 2x
+                "
               />
 
+              <img
+                class="about__image"
+                src="./images/mobile/bg-cow-m.png"
+                alt=""
+              />
             </picture>
-             <picture>
-              <source srcset="images/tablet/bg-cow-t.png 1x, images/tablet/bg-cow-t@2x.png 2x" />
-  
-             
+            <picture>
+              <source
+                srcset="
+                  images/tablet/bg-cow-t.png    1x,
+                  images/tablet/bg-cow-t@2x.png 2x
+                "
+              />
             </picture>
-             <picture>
-              <source srcset="images/desktop/bg-cow-d.png 1x, images/desktop/bg-cow-d@2x.png 2x" />
-  
-           
+            <picture>
+              <source
+                srcset="
+                  images/desktop/bg-cow-d.png    1x,
+                  images/desktop/bg-cow-d@2x.png 2x
+                "
+              />
             </picture>
-            
           </div>
           <div class="about__pharagraph">
             <p class="about__pharagraph-one">
@@ -54,6 +63,7 @@
               the age of three years. Sweets lovers can expect 55 types of ice
               cream, 15 types of coffee and 23 milkshakes.
             </p>
+
             <button data-modal-open class="about__button" type="button">
               Read more >
             </button>
@@ -62,30 +72,32 @@
       </div>
     </section>
     <!--MODAL about-->
-
     <div class="modal is-hidden" data-modal>
       <div class="modal__content">
         <button class="modal__close-btn" data-modal-close>&times;</button>
         <form class="modal__form">
-        <h4 class="modal__form-title">IceCream Made</h4>
-      
-      
-        <p>
-          Commercial ice cream is made by combining, under constant agitation,
-          the liquid ingredients (milk, cream, syrups, etc.). These liquids are
-          heated and combined with dry ingredients (sugar, stabilizers, dried
-          eggs or milk) to form a mix, which is then pasteurized and
-          homogenized. The mix is ripened for several hours in a refrigerated
-          vat, then combined with finely chopped fruit, nuts, or other solids.
-          The mix is agitated while being frozen in order to incorporate air and
-          control the size of the ice crystals that are formed. The partially
-          frozen ice cream is drawn off into packages and frozen solid, or
-          “hardened.” So-called soft-service ice cream was invented in 1939; it
-          is served directly from the freezing machine without being allowed to
-          harden
-        </p>
-      </form>
-      
+          <h4 class="modal__form-title">IceCream Made</h4>
+
+          <p class="modal__form-text">
+            Commercial ice cream is made by combining, under constant agitation,
+            the liquid ingredients (milk, cream, syrups, etc.). These liquids
+            are heated and combined with dry ingredients (sugar, stabilizers,
+            dried eggs or milk) to form a mix, which is then pasteurized and
+            homogenized. The mix is ripened for several hours in a refrigerated
+            vat, then combined with finely chopped fruit, nuts, or other solids.
+            The mix is agitated while being frozen in order to incorporate air
+            and control the size of the ice crystals that are formed. The
+            partially frozen ice cream is drawn off into packages and frozen
+            solid, or “hardened.” So-called soft-service ice cream was invented
+            in 1939; it is served directly from the freezing machine without
+            being allowed to harden
+          </p>
+        </form>
+      </div>
     </div>
+    <script src="./js/modal.js" type="text/javascript"></script>
+    <script>
+      feather.replace();
+    </script>
   </body>
 </html>
