--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,52 +1,68 @@
 .modal {
   position: fixed;
-  left: 0;
-  bottom: 0;
   top: 0;
+  bottom: 0;
   right: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: #cccccc;
+  left: 0;
+  width: 30vw;
+  height: 50vh;
+  background: #cccccc;
+  background-color: #b88888;
   opacity: 1;
-
-  transform: scale(1.1);
+  transform: scale(1);
   display: flex;
   justify-content: center;
   text-align: center;
+  border-color: #3d1313;
+}
+.is-hidden {
+  visibility: hidden;
+  transform: scale(2);
 }
 
 .modal__content {
   position: relative;
   margin: 0 auto;
-  background-color: #eeeeee;
-  width: 528px;
-  height: 700px;
-  border-radius: 4px;
+  background: #eeeeee;
+  width: 500px;
+  height: 300px;
 }
-.is-hidden {
-  transform: scale(1.1);
-  visibility: hidden;
-}
+
 .modal__close-btn {
-  background: transparent;
+  background: #cccccc;
   border: none;
   color: #851919;
   position: absolute;
   width: 32px;
   height: 32px;
   opacity: 0.3;
-  right: 16px;
-  top: 16px;
-  font-size: 32px;
-  transition: opacity var(--transition);
+  right: 20px;
+  top: 20px;
+  font-size: 25px;
+  outline: none;
+  border-radius: 100%;
 
+  cursor: pointer;
   &:hover,
   &:focus {
-    opacity: 1;
+    color: #b92525;
   }
 }
 .modal__form {
   padding: 40px;
   display: flex;
   flex-direction: column;
+  background-color: #b88888;
+
+  &-title {
+    color: #851919;
+    font-size: 30px;
+  }
+
+  &-text {
+    color: #3d1313;
+    font-size: 12px;
+    font-style: italic;
+    text-align: center;
+  }
 }
