--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,4 +1,4 @@
-<section class="section--contacts">
+<section class="section section--contacts">
   <div class="container">
     <h1 class="section__header--contacts">Contacts</h1>
     <ul class="locations">
@@ -35,7 +35,7 @@
         <p class="locations__type locations__type--foodtruck">FOOD TRUCK</p>
         <p class="locations__city">Los Angeles</p>
         <p class="locations__description">
-          Copy Fusion cuisine and refreshing ice cream made with passion.
+          Fusion cuisine and refreshing ice cream made with passion.
         </p>
 
         <hr class="spacer" />
