--- a/src/sass/_products-section.scss
+++ b/src/sass/_products-section.scss
@@ -23,8 +23,7 @@ $desktop-breakpoint: 1200px;
 }
 
 .section__subheading,
-.section__heading,
-.products__title {
+.section__heading {
   font-family: 'Titan One';
   letter-spacing: 0.04em;
   line-height: 1.145;
@@ -118,8 +117,12 @@ $desktop-breakpoint: 1200px;
 }
 
 .products__title {
+  font-family: 'Titan One';
+  letter-spacing: 0.04em;
+  line-height: 1.145;
+  text-align: center;
+  text-transform: capitalize;
   font-size: 20px;
-  line-height: 2.145;
   position: relative;
   &::after {
     content: '';
