--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 @import './common';
 @import './example';
 
-@import './container';
 @import './products-section';
+@import './about-section';
 @import './contacts-section';
