--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -97,6 +97,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .about {
+    background-image: none;
+  }
   .about__main {
     display: flex;
   }
