--- a/src/sass/sections/_how-its-made.scss
+++ b/src/sass/sections/_how-its-made.scss
@@ -15,6 +15,10 @@
   justify-content: center;
   gap: 15px;
   margin-bottom: 32px;
+  @media screen and (min-width: 768px) {
+    gap: 16px;
+    margin-bottom: 40px;
+  }
   &-first {
     font-size: 18px;
     line-height: 21px;
@@ -24,6 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 34px;
     line-height: 39px;
     color: #d41443;
